added loader to viewVolunteer.html

--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -72,6 +72,7 @@
 
 
         function refreshTable() {
+            $('#wait').show();
             checkCookie();
             var active = $("#activeCustomers").prop('checked');
 
@@ -84,6 +85,7 @@
                 type: "POST",
                 data: JSON.stringify({active: active}),
                 success: function (data) {
+                    $('#wait').hide();
                     var arr_volunteers = JSON.parse(data.d);
                     GENERAL.VOLUNTEERS.setVolunteersList(JSON.stringify(arr_volunteers));
 
@@ -180,7 +182,7 @@
 
                     });
                 },
-                error: function (err) { alert("Error in getVolunteers: "+ err.responseText); }
+                error: function (err) { alert("Error in getVolunteers: "+ err.responseText);  $('#wait').hide();}
             });
         }
 
@@ -299,19 +301,19 @@
                             <div class="card-box table-responsive">
 
                                 <!--<div class="row">
-                                    <div class="col-sm-8">
-                                        <h4 class="m-t-0 header-title"><b>טבלת מתנדבים</b></h4>
-                                        <p class="text-muted font-13 m-b-30">
-                                            מבט כללי על המתנדבים שבוצעו, ניתן לצפות בפרטים נוספים בלחיצה על כפתור ההרחבה.
-                                        </p>
-                                    </div>
-                                    <div class="col-sm-4 text-right">
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='צפייה'><i class='fa fa-wpforms'></i></button> צפייה
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='עריכה'><i class='ti-pencil'></i></button> עריכה
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove'></i></button> מחיקה
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזור'><i class='fa fa-undo'></i></button> שחזור
-                                    </div>
-                                </div>-->
+        <div class="col-sm-8">
+            <h4 class="m-t-0 header-title"><b>טבלת מתנדבים</b></h4>
+            <p class="text-muted font-13 m-b-30">
+                מבט כללי על המתנדבים שבוצעו, ניתן לצפות בפרטים נוספים בלחיצה על כפתור ההרחבה.
+            </p>
+        </div>
+        <div class="col-sm-4 text-right">
+            <button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='צפייה'><i class='fa fa-wpforms'></i></button> צפייה
+            <button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='עריכה'><i class='ti-pencil'></i></button> עריכה
+            <button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove'></i></button> מחיקה
+            <button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזור'><i class='fa fa-undo'></i></button> שחזור
+        </div>
+    </div>-->
                                 <div class="row">
                                     <div class="col-sm-3 checkbox checkbox-primary text-left">
                                         <input id="activeCustomers" type="checkbox" onchange="refreshTable()" checked>
@@ -329,15 +331,18 @@
                                         <tr>
                                             <th>המתנדב/ת</th>
                                             <th>סוג משתמש/ת</th>
-                                            <th >טלפון</th>
+                                            <th>טלפון</th>
                                             <th>טלפון נוסף</th>
                                             <th>יישוב</th>
                                             <th>Email</th>
-                                            <th>פעולות</th>     
+                                            <th>פעולות</th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
                                 </table>
+                                <div id="wait" style="display:none;width:69px;height:89px;position:absolute;top:50%;left:50%;padding:2px;">
+                                    <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
+                                </div>
                             </div>
                         </div>
                     </div>
