--- a/Road to Recovery/pages/locationForm.html
+++ b/Road to Recovery/pages/locationForm.html
@@ -103,6 +103,9 @@
                         $("#saveLocation").attr('disabled', 'disabled');
 
                     }
+                    else{
+                        $("#locationName").attr('disabled', 'disabled');
+                    }
                 }
                 else {
                     $("#activeLocation").prop('checked', 'checked');
