--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -50,6 +50,7 @@
 
 
         function refreshTable() {
+            $('#wait').show();
             checkCookie();
             var active = $("#activePatient").prop('checked');
 
@@ -62,6 +63,7 @@
                 type: "POST",
                 data: JSON.stringify({ active: active }),
                 success: function (data) {
+                    $('#wait').hide();
                     var arr_patients = JSON.parse(data.d);
                     //GENERAL.VOLUNTEERS.setvolunteersList(arr_volunteers);
 
@@ -182,7 +184,10 @@
 
                     });
                 },
-                error: function (err) { alert("Error in getPatients: "+err.responseText); }
+                error: function (err) {
+                    $('#wait').hide();
+                    alert("Error in getPatients: " + err.responseText);
+                }
             });
         }
 
@@ -285,19 +290,19 @@
                         <div class="col-sm-12">
                             <div class="card-box table-responsive">
                                 <!--<div class="row">
-                                    <div class="col-sm-8">
-                                        <h4 class="m-t-0 header-title"><b>טבלת חולים</b></h4>
-                                        <p class="text-muted font-13 m-b-30">
-                                            מבט כללי על החולים שבוצעו, ניתן לצפות בפרטים נוספים בלחיצה על כפתור ההרחבה.
-                                        </p>
-                                    </div>
-                                    <div class="col-sm-4 text-right">
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='צפייה'><i class='fa fa-wpforms'></i></button> צפייה
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='עריכה'><i class='ti-pencil'></i></button> ערכיה
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove'></i></button> מחיקה
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזור'><i class='fa fa-undo'></i></button> שחזור
-                                    </div>
-                                </div>-->
+        <div class="col-sm-8">
+            <h4 class="m-t-0 header-title"><b>טבלת חולים</b></h4>
+            <p class="text-muted font-13 m-b-30">
+                מבט כללי על החולים שבוצעו, ניתן לצפות בפרטים נוספים בלחיצה על כפתור ההרחבה.
+            </p>
+        </div>
+        <div class="col-sm-4 text-right">
+            <button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='צפייה'><i class='fa fa-wpforms'></i></button> צפייה
+            <button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='עריכה'><i class='ti-pencil'></i></button> ערכיה
+            <button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove'></i></button> מחיקה
+            <button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזור'><i class='fa fa-undo'></i></button> שחזור
+        </div>
+    </div>-->
                                 <div class="row">
                                     <div class="col-sm-3 checkbox checkbox-primary text-left">
                                         <input id="activePatient" type="checkbox" onchange="refreshTable()" checked>
@@ -324,6 +329,9 @@
                                     </thead>
                                     <tbody></tbody>
                                 </table>
+                                <div id="wait" style="display:none;width:69px;height:89px;position:absolute;top:50%;left:50%;padding:2px;">
+                                    <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
+                                </div>
                             </div>
                         </div>
                     </div>
